Efmub-Ogy/src/objects/libCoreConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Personal configuration settings for the ClosedWon Core</description>
    <fields>
        <fullName>AF_Endpoint__c</fullName>
        <description>This is the SOA service call endpoint for all Air France web services.</description>
        <inlineHelpText>This is the SOA service call endpoint for all Air France web services.</inlineHelpText>
        <label>AF Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Allow_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to allow this User/Profile to deploy to this org.</description>
        <inlineHelpText>Check this to allow this User/Profile to deploy to this org.</inlineHelpText>
        <label>Allow Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Valdiation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to bypass Validation Rules</description>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Workflow_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass the Workflow Rules</description>
        <label>Bypass Workflow Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Limit_Level_2__c</fullName>
        <description>Req-276 : Ability to control or limit the value that an Agent can submit for compensation based upon their position within the organization</description>
        <label>Check Limit Level 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Limit__c</fullName>
        <description>Req-276 : Ability to control or limit the value that an Agent can submit for compensation based upon their position within the organization</description>
        <label>Check Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_ErrorHandler__c</fullName>
        <defaultValue>&quot;CWException.IgnoreError&quot;</defaultValue>
        <description>The fully qualified class name for the default ErrorHandler</description>
        <inlineHelpText>The fully qualified class name for the default ErrorHandler</inlineHelpText>
        <label>Default ErrorHandler</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Queue_Name__c</fullName>
        <label>Default Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to disable automatic rollups defined in the CWRollup custom setting.</description>
        <inlineHelpText>Check this to disable automatic rollups defined in the CWRollup custom setting.</inlineHelpText>
        <label>Disable Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to disable all triggers that have been implemented using CWTrigger.</description>
        <inlineHelpText>Check this to disable all triggers that have been implemented using CWTrigger.</inlineHelpText>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_API_Key__c</fullName>
        <description>The API Key to use with Google Maps and other APIs</description>
        <inlineHelpText>The API Key to use with Google Maps and other APIs</inlineHelpText>
        <label>Google API Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Detection_Endpoint__c</fullName>
        <label>Language Detection Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Language_Detection_Key__c</fullName>
        <label>Language Detection Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Certificate__c</fullName>
        <description>This is the name of the Certificate to use when making SOA Service callouts.</description>
        <label>SOA Certificate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Endpoint__c</fullName>
        <description>This is the base endpoint used when making SOA Service callouts.</description>
        <label>SOA Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SkyMiles_Limit__c</fullName>
        <description>Req-276 : Ability to control or limit the value that an Agent can submit for compensation based upon their position within the organization</description>
        <label>SkyMiles Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sky_Miles_Limit_Level_2__c</fullName>
        <description>Req-276 : Ability to control or limit the value that an Agent can submit for compensation based upon their position within the organization</description>
        <label>Sky Miles Limit Level 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Locked_Service_Recovery_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the user should be able to adjust a locked Service Recovery Record.</description>
        <label>Update Locked Service Recovery Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eTCV_Limit_Level_2__c</fullName>
        <description>Req-276 : Ability to control or limit the value that an Agent can submit for compensation based upon their position within the organization</description>
        <label>eTCV Limit Level 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eTCV_Limit__c</fullName>
        <description>Req-276 : Ability to control or limit the value that an Agent can submit for compensation based upon their position within the organization</description>
        <label>eTCV Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>CWCoreConfiguration</label>
</CustomObject>